; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_ui.c_render_overall_header.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_ui.c_render_overall_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdscr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c" %s\00", align 1
@color_panel_header = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @render_overall_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_overall_header(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i8* @get_overall_header(i32* %7)
  store i8* %8, i8** %5, align 8
  %9 = load i32, i32* @stdscr, align 4
  %10 = call i32 @getmaxx(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @color_panel_header, align 4
  %15 = call i32 @draw_header(i32* %11, i8* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 0, i32 0, i32 %13, i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @free(i8* %16)
  ret void
}

declare dso_local i8* @get_overall_header(i32*) #1

declare dso_local i32 @getmaxx(i32) #1

declare dso_local i32 @draw_header(i32*, i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
